[gd_scene load_steps=7 format=3 uid="uid://dmvdb78ivhd4v"]

[ext_resource type="Script" uid="uid://yqwp6ovg6pgl" path="res://Scripts/HUD.gd" id="1_sd512"]
[ext_resource type="Texture2D" uid="uid://dq25jpnf5whh3" path="res://Assets/icon.svg" id="2_jo1ms"]
[ext_resource type="Texture2D" uid="uid://djftr0r1o4fy3" path="res://Assets/Pixelarium - Interfaces Bundle - Free version/Pack Content/DarkMode Interface/Player interface/Player Status/Player status bars frame for 9-slice/spr_health_bar_bk_9slice.png" id="2_s3jbq"]
[ext_resource type="Texture2D" uid="uid://c1743w4pxqt1r" path="res://Assets/Pixelarium - Interfaces Bundle - Free version/Pack Content/DarkMode Interface/Player interface/Player Status/Player status bars frame for 9-slice/spr_health_bar_9slice.png" id="3_c3eba"]
[ext_resource type="Texture2D" uid="uid://banq0mvtd7117" path="res://Assets/Pixelarium - Interfaces Bundle - Free version/Pack Content/DarkMode Interface/Player interface/Player Status/Player status bars frame for 9-slice/spr_mana_bar_9slice.png" id="4_g8s2e"]
[ext_resource type="Texture2D" uid="uid://ld24y5ydy4ue" path="res://Assets/Pixelarium - Interfaces Bundle - Free version/Pack Content/DarkMode Interface/Player interface/Player Status/Player status bars frame for 9-slice/spr_mana_bar_bk_9slice.png" id="5_t385i"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_sd512")

[node name="HealthBarContainer" type="Control" parent="."]
custom_minimum_size = Vector2(300, 40)
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 40.0

[node name="HealthBarFrame" type="NinePatchRect" parent="HealthBarContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_c3eba")
patch_margin_left = 9
patch_margin_right = 9

[node name="HealthBarFill" type="NinePatchRect" parent="HealthBarContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_s3jbq")
patch_margin_left = 9
patch_margin_right = 9

[node name="ManaBarContainer" type="Control" parent="."]
custom_minimum_size = Vector2(300, 40)
layout_mode = 3
anchors_preset = 0
offset_top = 40.0
offset_right = 300.0
offset_bottom = 80.0

[node name="ManaBarFrame" type="NinePatchRect" parent="ManaBarContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_g8s2e")
patch_margin_left = 9
patch_margin_right = 9

[node name="ManaBarFill" type="NinePatchRect" parent="ManaBarContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_t385i")
patch_margin_left = 9
patch_margin_right = 9

[node name="SkillBarContainer" type="HBoxContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="SkillSlotQ" type="Panel" parent="SkillBarContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Q
"

[node name="SkillQ_Icon" type="TextureRect" parent="SkillBarContainer/SkillSlotQ"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jo1ms")
expand_mode = 1

[node name="Label" type="Label" parent="SkillBarContainer/SkillSlotQ"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 30.0
offset_right = 32.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
text = "Q"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CostLabel" type="Label" parent="SkillBarContainer/SkillSlotQ"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -13.0
offset_bottom = 23.0
grow_horizontal = 0
scale = Vector2(0.8, 0.8)
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SkillQ_CooldownOverlay" type="TextureProgressBar" parent="SkillBarContainer/SkillSlotQ"]
modulate = Color(0, 0, 0, 0.678431)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.2
fill_mode = 2
nine_patch_stretch = true
texture_progress = ExtResource("2_jo1ms")

[node name="SkillSlotE" type="Panel" parent="SkillBarContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Q
"

[node name="SkillE_Icon" type="TextureRect" parent="SkillBarContainer/SkillSlotE"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jo1ms")
expand_mode = 1

[node name="Label" type="Label" parent="SkillBarContainer/SkillSlotE"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 41.0
offset_right = 32.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
text = "E
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SkillE_CooldownOverlay" type="TextureProgressBar" parent="SkillBarContainer/SkillSlotE"]
modulate = Color(0, 0, 0, 0.678431)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.2
fill_mode = 2
nine_patch_stretch = true
texture_progress = ExtResource("2_jo1ms")

[node name="CostLabel" type="Label" parent="SkillBarContainer/SkillSlotE"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -13.0
offset_bottom = 23.0
grow_horizontal = 0
scale = Vector2(0.8, 0.8)
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DamageFlash" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="ActiveItemSlot" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(64, 64)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -64.0
offset_right = 64.0
grow_vertical = 0
size_flags_horizontal = 3
tooltip_text = "Q
"

[node name="ItemIcon" type="TextureRect" parent="ActiveItemSlot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jo1ms")
expand_mode = 1

[node name="QuantityLabel" type="Label" parent="ActiveItemSlot"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -10.0
offset_bottom = 23.0
grow_horizontal = 0
scale = Vector2(0.8, 0.8)
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="ActiveItemSlot"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.8, 0.8)
text = "R"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
